tests/errors/isinstance_bad_type.experr
isinstance second argument must be a class
